--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx:alpine
-COPY ci/index.html /usr/share/nginx/html
-ENTRYPOINT ["ci/entrypoint.sh"]
+COPY ./ci/index.html /usr/share/nginx/html
+ENTRYPOINT ["/bin/sh", "./ci/entrypoint.sh"]
