--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx:alpine
-COPY $PWD/ci/index.html /usr/share/nginx/html
-ENTRYPOINT ["/bin/sh", "$PWD/ci/entrypoint.sh"]
+WORKDIR /ci
+COPY index.html /usr/share/nginx/html
+ENTRYPOINT ["/bin/sh", "entrypoint.sh"]
