--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:alpine
 WORKDIR /ci
 COPY index.html /usr/share/nginx/html
-ENTRYPOINT ["/bin/sh", "entrypoint.sh"]
+ENTRYPOINT ["/bin/sh/", "./entrypoint.sh"]
