testing docker build

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:alpine
 WORKDIR /ci
 COPY index.html /usr/share/nginx/html
-COPY /ci/entrypoint.sh /
+COPY /entrypoint.sh /
 ENTRYPOINT ["entrypoint.sh"]
