testing docker build

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx:alpine
 WORKDIR /ci
 COPY index.html /usr/share/nginx/html
 COPY /entrypoint.sh /
-ENTRYPOINT ["entrypoint.sh"]
+ENTRYPOINT ["/entrypoint.sh"]
