testing docker build

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:alpine
 WORKDIR /ci
 COPY index.html /usr/share/nginx/html
-COPY /entrypoint.sh /
+COPY /entrypoint.sh /ci/
+ENTRYPOINT ["/entrypoint.sh"]
