testing docker build

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -2,4 +2,5 @@ FROM nginx:alpine
 WORKDIR /ci
 COPY index.html /usr/share/nginx/html
 COPY /entrypoint.sh /ci/
-#ENTRYPOINT ["/entrypoint.sh"]
+RUN chmod 777 /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
