testing docker build

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -2,5 +2,5 @@ FROM nginx:alpine
 WORKDIR /ci
 COPY index.html /usr/share/nginx/html
 COPY /entrypoint.sh /ci/
-RUN chmod 777 /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
+RUN chmod 777 /ci/entrypoint.sh
+ENTRYPOINT ["/ci/entrypoint.sh"]
