testing docker build

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /ci
 COPY index.html /usr/share/nginx/html
 COPY /entrypoint.sh /ci/
 RUN chmod 777 /ci/entrypoint.sh
-ENTRYPOINT ["/ci/entrypoint.sh"]
+RUN /ci/entrypoint.sh
