--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:alpine
 WORKDIR /ci
 COPY index.html /usr/share/nginx/html
-COPY /entrypoint.sh /ci/
-RUN chmod 777 /ci/entrypoint.sh
-RUN /ci/entrypoint.sh
+COPY /run.sh /ci/
+RUN chmod 777 /ci/run.sh
+RUN /ci/run.sh
